# metacognitive-mcp

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  SECURITY.md  THEORY_OF_OPERATION.md  pyproject.toml
