[project]
name = "metacognitive-mcp"
version = "0.1.0"
description = "Epistemic reasoning infrastructure for AI agents - a Model Context Protocol server providing structured cognition tools"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Dr. Aneesh Joseph", email = "your.email@example.com"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "metacognition",
    "epistemic-reasoning",
    "ai-reasoning",
    "cognitive-architecture",
    "bias-detection",
    "inference-validation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pip-audit>=2.6.0",
]

[project.scripts]
metacognitive-mcp = "metacognitive_mcp.server:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/metacognitive-mcp"
Documentation = "https://github.com/YOUR_USERNAME/metacognitive-mcp#readme"
Repository = "https://github.com/YOUR_USERNAME/metacognitive-mcp.git"
Issues = "https://github.com/YOUR_USERNAME/metacognitive-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metacognitive_mcp"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
